fixed an error in data uploading to cloud, included graphs for better visualisation

--- a/Isolation_forest_OC_SVM/Isolation_forest_simulateddata .ipynb
+++ b/Isolation_forest_OC_SVM/Isolation_forest_simulateddata .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
        "max       -1.441937      2.038365      2.042171      2.044322  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +468,7 @@
        "max        0.022423      0.019336      0.017689      0.021247  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,11 +496,11 @@
       "text/plain": [
        "IsolationForest(behaviour='new', bootstrap=False, contamination=0.01,\n",
        "                max_features=1.0, max_samples=10, n_estimators=100, n_jobs=None,\n",
-       "                random_state=RandomState(MT19937) at 0x122D65160, verbose=0,\n",
+       "                random_state=RandomState(MT19937) at 0x11B6429E0, verbose=0,\n",
        "                warm_start=False)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "            verbose=False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'timestamp': '2020-04-11 15:47:29', 'sensorValues': '\"\\\\n    {\\\\\"sm1\\\\\":20.4513083514,\\\\\"sm2\\\\\": 20.7647577237,\\\\\"sm3\\\\\": 20.2066547548,\\\\\"sm4\\\\\": 20.7689340097,\\\\\"sm5\\\\\": 20.6868415675,\\\\n    \\\\\"sm6\\\\\": 20.7070167752,\\\\\"sm7\\\\\": 20.7594547625,\\\\\"sm8\\\\\": 20.7645757216,\\\\\"sm9\\\\\": 20.7053430575,\\\\\"sm10\\\\\": 20.7645757216,\\\\n    \\\\\"sm11\\\\\": 20.7741159863,\\\\\"sm12\\\\\": 20.2305661793,\\\\\"sm13\\\\\": 20.6842949952,\\\\\"sm14\\\\\": 20.7030147186,\\\\\"sm15\\\\\": 20.1846139703,\\\\n    \\\\\"sm16\\\\\": 20.8033918196,\\\\\"sm17\\\\\": 20.2915486094,\\\\\"sm18\\\\\": 20.6769631296,\\\\\"sm19\\\\\": 20.6784845669,\\\\\"sm20\\\\\": 20.6580434021,\\\\n    \\\\\"sm21\\\\\": 20.1847069344,\\\\\"sm22\\\\\": 20.4024137017,\\\\\"sm23\\\\\": 20.7443473273,\\\\\"sm24\\\\\": 20.8102861434,\\\\\"sm25\\\\\": 20.8020052385,\\\\n    \\\\\"sm26\\\\\": 20.1811785653,\\\\\"sm27\\\\\": 20.6582611815,\\\\\"sm28\\\\\": 20.7054282394,\\\\\"sm29\\\\\": 20.7056535045,\\\\\"sm30\\\\\": 20.747752453,\\\\n    } \\\\n    \"', 'ml_prediction': '\"\\\\n    {\\\\\"prediction\\\\\": -1}\\\\n    \"'}\n",
+      "{'timestamp': '2020-04-12 16:42:15', 'sensorValues': '{\"sm1\": \"20.4513083514\", \"sm2\": \"20.7647577237\", \"sm3\": \"20.2066547548\", \"sm4\": \"20.7689340097\", \"sm5\": \"20.6868415675\", \"sm6\": \"20.7070167752\", \"sm7\": \"20.7594547625\", \"sm8\": \"20.7585796267\", \"sm9\": \"20.7053430575\", \"sm10\": \"20.7645757216\", \"sm11\": \"20.7741159863\", \"sm12\": \"20.2305661793\", \"sm13\": \"20.6842949952\", \"sm14\": \"20.7030147186\", \"sm15\": \"20.1846139703\", \"sm16\": \"20.8033918196\", \"sm17\": \"20.2915486094\", \"sm18\": \"20.6769631296\", \"sm19\": \"20.6784845669\", \"sm20\": \"20.6580434021\", \"sm21\": \"20.1847069344\", \"sm22\": \"20.4024137017\", \"sm23\": \"20.7443473273\", \"sm24\": \"20.8102861434\", \"ml_prediction\": \"-1\"}'}\n",
       "99999\n"
      ]
     }
@@ -655,31 +655,24 @@
     "i=0\n",
     "for counter in range(0,(MMC1Vlc.shape[0]-1)): \n",
     "    sm_v=MMC1Vlc[counter]\n",
-    "    prediction=str(ML_prediction[counter])\n",
-    "    sensor_values = '''\n",
-    "    {\"sm1\":%(v1)s,\"sm2\": %(v2)s,\"sm3\": %(v3)s,\"sm4\": %(v4)s,\"sm5\": %(v5)s,\n",
-    "    \"sm6\": %(v6)s,\"sm7\": %(v7)s,\"sm8\": %(v8)s,\"sm9\": %(v9)s,\"sm10\": %(v10)s,\n",
-    "    \"sm11\": %(v11)s,\"sm12\": %(v12)s,\"sm13\": %(v13)s,\"sm14\": %(v14)s,\"sm15\": %(v15)s,\n",
-    "    \"sm16\": %(v16)s,\"sm17\": %(v17)s,\"sm18\": %(v18)s,\"sm19\": %(v19)s,\"sm20\": %(v20)s,\n",
-    "    \"sm21\": %(v21)s,\"sm22\": %(v22)s,\"sm23\": %(v23)s,\"sm24\": %(v24)s,\"sm25\": %(v25)s,\n",
-    "    \"sm26\": %(v26)s,\"sm27\": %(v27)s,\"sm28\": %(v28)s,\"sm29\": %(v29)s,\"sm30\": %(v30)s,\n",
-    "    } \n",
-    "    '''%{'v1':str(sm_v[0]),'v2':str(sm_v[1]),'v3':str(sm_v[2]),'v4':str(sm_v[3]),'v5':str(sm_v[4]),\n",
-    "     'v6':str(sm_v[5]),'v7':str(sm_v[6]),'v8':str(sm_v[9]),'v9':str(sm_v[8]),'v10':str(sm_v[9]),\n",
-    "     'v11':str(sm_v[10]),'v12':str(sm_v[11]),'v13':str(sm_v[12]),'v14':str(sm_v[13]),'v15':str(sm_v[14]),\n",
-    "     'v16':str(sm_v[15]),'v17':str(sm_v[16]),'v18':str(sm_v[17]),'v19':str(sm_v[18]),'v20':str(sm_v[19]),\n",
-    "     'v21':str(sm_v[20]),'v22':str(sm_v[21]),'v23':str(sm_v[22]),'v24':str(sm_v[23]),'v25':str(sm_v[24]),\n",
-    "     'v26':str(sm_v[25]),'v27':str(sm_v[26]),'v28':str(sm_v[27]),'v29':str(sm_v[28]),'v30':str(sm_v[29])\n",
-    "    }\n",
-    "\n",
-    "    ml_prediction='''\n",
-    "    {\"prediction\": %(p)s}\n",
-    "    '''%{'p':prediction}\n",
+    "    prediction=ML_prediction[counter]\n",
+    "    sensor={\"sm1\":str(sm_v[0]),\"sm2\":str(sm_v[1]) ,\"sm3\": str(sm_v[2]),\"sm4\": str(sm_v[3]),\"sm5\":str(sm_v[4]),\n",
+    "            \"sm6\": str(sm_v[5]) ,\"sm7\":str(sm_v[6]) ,\"sm8\":str(sm_v[7]) ,\"sm9\":str(sm_v[8]) ,\"sm10\":str(sm_v[9]) ,\n",
+    "            \"sm11\": str(sm_v[10]) ,\"sm12\":str(sm_v[11]) ,\"sm13\":str(sm_v[12]) ,\"sm14\":str(sm_v[13]) ,\"sm15\":str(sm_v[14]) ,\n",
+    "            \"sm16\": str(sm_v[15]) ,\"sm17\":str(sm_v[16]) ,\"sm18\":str(sm_v[17]) ,\"sm19\":str(sm_v[18]) ,\"sm20\":str(sm_v[19]) ,\n",
+    "            \"sm21\": str(sm_v[20]) ,\"sm22\":str(sm_v[21]) ,\"sm23\":str(sm_v[22]) ,\"sm24\":str(sm_v[23]) ,\n",
+    "            \"ml_prediction\": str(prediction)}\n",
+    "    \n",
+    "    sensor2={\"sm25\":str(sm_v[24]) ,\"sm26\": str(sm_v[25]) ,\"sm27\":str(sm_v[26]) ,\"sm28\":str(sm_v[27]) ,\"sm29\":str(sm_v[28]) ,\n",
+    "             \"sm30\":str(sm_v[29])\n",
+    "            }\n",
     "\n",
     "    # data to be sent to api \n",
     "    data = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
-    "            'sensorValues': json.dumps(sensor_values),\n",
-    "            'ml_prediction': json.dumps(ml_prediction)\n",
+    "            'sensorValues': json.dumps(sensor)\n",
+    "           }\n",
+    "    data2 = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
+    "            'sensorValues': json.dumps(sensor2)\n",
     "           }\n",
     "    #data uploading is commented for now considering posting limit of aws \n",
     "    #r = requests.post(url = API_ENDPOINT, json = data) \n",
@@ -693,22 +686,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data returned =null\n"
+      "Data returned ={\"active\":false}\n",
+      "Data returned ={\"active\":false}\n"
      ]
     }
    ],
    "source": [
     "#uploads the last row of data for now \n",
     "r = requests.post(url = API_ENDPOINT, json = data) \n",
+    "r2=  requests.post(url = API_ENDPOINT, json = data2) \n",
     "\n",
-    "print(\"Data returned =%s\"%r.text)"
+    "print(\"Data returned =%s\"%r.text)\n",
+    "print(\"Data returned =%s\"%r2.text)"
    ]
   },
   {
@@ -955,13 +951,6 @@
     "plt.xlabel(\"Ia1\")\n",
     "plt.ylabel(\"Ib1\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
