added code to upload Vlc and Vuc data

--- a/Isolation_forest_OC_SVM/Isolation_forest_simulateddata .ipynb
+++ b/Isolation_forest_OC_SVM/Isolation_forest_simulateddata .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
        "max       -1.441937      2.038365      2.042171      2.044322  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,9 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "max        0.022423      0.019336      0.017689      0.021247  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -496,11 +496,11 @@
       "text/plain": [
        "IsolationForest(behaviour='new', bootstrap=False, contamination=0.01,\n",
        "                max_features=1.0, max_samples=10, n_estimators=100, n_jobs=None,\n",
-       "                random_state=RandomState(MT19937) at 0x11B6429E0, verbose=0,\n",
+       "                random_state=RandomState(MT19937) at 0x117934270, verbose=0,\n",
        "                warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "            verbose=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,109 @@
      "output_type": "stream",
      "text": [
       "(100000, 30)\n",
-      "(100000,)\n"
+      "(100000,)\n",
+      "          18.956490     18.979790     18.857147     18.985519     18.874600  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      19.876993     19.890469     19.886875     19.904530     19.883246   \n",
+      "std        0.713159      0.713858      0.710642      0.702647      0.707011   \n",
+      "min       18.815994     18.792505     18.790440     18.787902     18.787364   \n",
+      "25%       19.262492     19.231560     19.261312     19.323076     19.253834   \n",
+      "50%       19.782491     19.817228     19.835828     19.802353     19.839025   \n",
+      "75%       20.513722     20.526259     20.508363     20.525588     20.515025   \n",
+      "max       21.267891     21.267788     21.235537     21.234383     21.245918   \n",
+      "\n",
+      "          18.844531     18.923615     18.967159     18.932091     18.855487  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      19.879819     19.890693     19.870861     19.885672     19.891840   \n",
+      "std        0.708607      0.712137      0.718816      0.705831      0.711779   \n",
+      "min       18.783716     18.784766     18.788307     18.781174     18.809981   \n",
+      "25%       19.260870     19.289069     19.248055     19.271689     19.286920   \n",
+      "50%       19.798393     19.800354     19.782250     19.804518     19.817931   \n",
+      "75%       20.522942     20.535595     20.515550     20.528280     20.520991   \n",
+      "max       21.250021     21.240965     21.237759     21.256064     21.264268   \n",
+      "\n",
+      "       ...     18.878272     18.990114     18.985484     18.933397  \\\n",
+      "count  ...  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean   ...     19.877857     19.883263     19.888155     19.884297   \n",
+      "std    ...      0.712018      0.718201      0.713472      0.712951   \n",
+      "min    ...     18.789996     18.802732     18.824166     18.801342   \n",
+      "25%    ...     19.229566     19.208857     19.264577     19.240401   \n",
+      "50%    ...     19.830326     19.832432     19.808265     19.824238   \n",
+      "75%    ...     20.526385     20.534235     20.532048     20.516074   \n",
+      "max    ...     21.247307     21.241163     21.245755     21.270188   \n",
+      "\n",
+      "          18.961479     18.894399     18.917711     19.006595     18.905275  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      19.896289     19.874310     19.897119     19.893589     19.887709   \n",
+      "std        0.695334      0.715067      0.709786      0.703075      0.707875   \n",
+      "min       18.772498     18.806625     18.785426     18.789939     18.767917   \n",
+      "25%       19.290952     19.264336     19.291950     19.275097     19.282590   \n",
+      "50%       19.795240     19.788639     19.786607     19.831790     19.800338   \n",
+      "75%       20.508028     20.523283     20.529574     20.532693     20.518297   \n",
+      "max       21.280019     21.231409     21.262212     21.236575     21.244885   \n",
+      "\n",
+      "          18.973009  \n",
+      "count  50000.000000  \n",
+      "mean      19.886837  \n",
+      "std        0.709649  \n",
+      "min       18.760424  \n",
+      "25%       19.274229  \n",
+      "50%       19.830248  \n",
+      "75%       20.518314  \n",
+      "max       21.233965  \n",
+      "\n",
+      "[8 rows x 30 columns]\n",
+      "          20.472167     20.785934     20.227264     20.790114     20.707939  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      20.461781     20.775389     20.217003     20.779568     20.697434   \n",
+      "std        0.006022      0.006114      0.005950      0.006115      0.006091   \n",
+      "min       20.451308     20.764758     20.206655     20.768934     20.686842   \n",
+      "25%       20.456613     20.770142     20.211897     20.774319     20.692206   \n",
+      "50%       20.461733     20.775341     20.216955     20.779519     20.697385   \n",
+      "75%       20.467042     20.780730     20.222201     20.784909     20.702754   \n",
+      "max       20.472167     20.785933     20.227264     20.790114     20.707939   \n",
+      "\n",
+      "          20.728134     20.780625     20.779749     20.726459     20.785751  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      20.717619     20.770083     20.769208     20.715944     20.775207   \n",
+      "std        0.006097      0.006112      0.006112      0.006096      0.006113   \n",
+      "min       20.707017     20.759455     20.758580     20.705343     20.764576   \n",
+      "25%       20.712386     20.764837     20.763962     20.710712     20.769960   \n",
+      "50%       20.717570     20.770035     20.769159     20.715896     20.775158   \n",
+      "75%       20.722945     20.775423     20.774547     20.721270     20.780547   \n",
+      "max       20.728134     20.780625     20.779749     20.726459     20.785751   \n",
+      "\n",
+      "       ...     20.205294     20.423223     20.765503     20.831508  \\\n",
+      "count  ...  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean   ...     20.195044     20.412862     20.754968     20.820940   \n",
+      "std    ...      0.005944      0.006008      0.006108      0.006127   \n",
+      "min    ...     20.184707     20.402414     20.744347     20.810286   \n",
+      "25%    ...     20.189943     20.407706     20.749726     20.815682   \n",
+      "50%    ...     20.194996     20.412813     20.754920     20.820892   \n",
+      "75%    ...     20.200237     20.418110     20.760304     20.826292   \n",
+      "max    ...     20.205294     20.423223     20.765502     20.831508   \n",
+      "\n",
+      "          20.823219     20.201762     20.679330     20.726544     20.726770  \\\n",
+      "count  50000.000000  50000.000000  50000.000000  50000.000000  50000.000000   \n",
+      "mean      20.812655     20.191514     20.668839     20.716030     20.716255   \n",
+      "std        0.006124      0.005943      0.006082      0.006096      0.006096   \n",
+      "min       20.802005     20.181179     20.658261     20.705428     20.705654   \n",
+      "25%       20.807399     20.186414     20.663618     20.710797     20.711023   \n",
+      "50%       20.812607     20.191465     20.668790     20.715981     20.716207   \n",
+      "75%       20.818005     20.196705     20.674152     20.721355     20.721581   \n",
+      "max       20.823219     20.201762     20.679329     20.726544     20.726770   \n",
+      "\n",
+      "          20.768911  \n",
+      "count  50000.000000  \n",
+      "mean      20.758375  \n",
+      "std        0.006109  \n",
+      "min       20.747752  \n",
+      "25%       20.753132  \n",
+      "50%       20.758327  \n",
+      "75%       20.763711  \n",
+      "max       20.768911  \n",
+      "\n",
+      "[8 rows x 30 columns]\n"
      ]
     }
    ],
@@ -625,7 +727,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MMC1Vuc_1=pd.read_excel(\"MMC1Vuc_1.xlsx\", usecols=\"B:AE\",skiprows=100002)\n",
+    "MMC1Vuc_4=pd.read_excel(\"MMC1Vuc_4.xlsx\", usecols=\"B:AE\",skiprows=100002)\n",
+    "MMC1Vuc=np.concatenate((MMC1Vuc_1,MMC1Vuc_4), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,14 +752,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'timestamp': '2020-04-12 16:42:15', 'sensorValues': '{\"sm1\": \"20.4513083514\", \"sm2\": \"20.7647577237\", \"sm3\": \"20.2066547548\", \"sm4\": \"20.7689340097\", \"sm5\": \"20.6868415675\", \"sm6\": \"20.7070167752\", \"sm7\": \"20.7594547625\", \"sm8\": \"20.7585796267\", \"sm9\": \"20.7053430575\", \"sm10\": \"20.7645757216\", \"sm11\": \"20.7741159863\", \"sm12\": \"20.2305661793\", \"sm13\": \"20.6842949952\", \"sm14\": \"20.7030147186\", \"sm15\": \"20.1846139703\", \"sm16\": \"20.8033918196\", \"sm17\": \"20.2915486094\", \"sm18\": \"20.6769631296\", \"sm19\": \"20.6784845669\", \"sm20\": \"20.6580434021\", \"sm21\": \"20.1847069344\", \"sm22\": \"20.4024137017\", \"sm23\": \"20.7443473273\", \"sm24\": \"20.8102861434\", \"ml_prediction\": \"-1\"}'}\n",
+      "{'timestamp': '2020-04-13 16:24:37', 'sensorValues': '{\"SM1Vlc\": \"20.4513083514\", \"SM2Vlc\": \"20.7647577237\", \"SM3Vlc\": \"20.2066547548\", \"SM4Vlc\": \"20.7689340097\", \"SM5Vlc\": \"20.6868415675\", \"SM6Vlc\": \"20.7070167752\", \"SM7Vlc\": \"20.7594547625\", \"SM8Vlc\": \"20.7585796267\", \"SM9Vlc\": \"20.7053430575\", \"SM10Vlc\": \"20.7645757216\", \"SM11Vlc\": \"20.7741159863\", \"SM12Vlc\": \"20.2305661793\", \"SM13Vlc\": \"20.6842949952\", \"SM14Vlc\": \"20.7030147186\", \"SM15Vlc\": \"20.1846139703\", \"SM16Vlc\": \"20.8033918196\", \"SM17Vlc\": \"20.2915486094\", \"SM18Vlc\": \"20.6769631296\", \"SM19Vlc\": \"20.6784845669\", \"SM20Vlc\": \"20.6580434021\", \"SM21Vlc\": \"20.1847069344\", \"SM22Vlc\": \"20.4024137017\", \"SM23Vlc\": \"20.7443473273\", \"SM24Vlc\": \"20.8102861434\", \"ml_prediction\": \"-1\"}'}\n",
       "99999\n"
      ]
     }
@@ -654,25 +767,36 @@
    "source": [
     "i=0\n",
     "for counter in range(0,(MMC1Vlc.shape[0]-1)): \n",
-    "    sm_v=MMC1Vlc[counter]\n",
+    "    SMVlc=MMC1Vlc[counter]\n",
+    "    SMVuc=MMC1Vuc[counter]\n",
     "    prediction=ML_prediction[counter]\n",
-    "    sensor={\"sm1\":str(sm_v[0]),\"sm2\":str(sm_v[1]) ,\"sm3\": str(sm_v[2]),\"sm4\": str(sm_v[3]),\"sm5\":str(sm_v[4]),\n",
-    "            \"sm6\": str(sm_v[5]) ,\"sm7\":str(sm_v[6]) ,\"sm8\":str(sm_v[7]) ,\"sm9\":str(sm_v[8]) ,\"sm10\":str(sm_v[9]) ,\n",
-    "            \"sm11\": str(sm_v[10]) ,\"sm12\":str(sm_v[11]) ,\"sm13\":str(sm_v[12]) ,\"sm14\":str(sm_v[13]) ,\"sm15\":str(sm_v[14]) ,\n",
-    "            \"sm16\": str(sm_v[15]) ,\"sm17\":str(sm_v[16]) ,\"sm18\":str(sm_v[17]) ,\"sm19\":str(sm_v[18]) ,\"sm20\":str(sm_v[19]) ,\n",
-    "            \"sm21\": str(sm_v[20]) ,\"sm22\":str(sm_v[21]) ,\"sm23\":str(sm_v[22]) ,\"sm24\":str(sm_v[23]) ,\n",
+    "    sensor1={\"SM1Vlc\":str(SMVlc[0]),\"SM2Vlc\":str(SMVlc[1]) ,\"SM3Vlc\": str(SMVlc[2]),\"SM4Vlc\": str(SMVlc[3]),\"SM5Vlc\":str(SMVlc[4]),\n",
+    "            \"SM6Vlc\": str(SMVlc[5]) ,\"SM7Vlc\":str(SMVlc[6]) ,\"SM8Vlc\":str(SMVlc[7]) ,\"SM9Vlc\":str(SMVlc[8]) ,\"SM10Vlc\":str(SMVlc[9]) ,\n",
+    "            \"SM11Vlc\": str(SMVlc[10]) ,\"SM12Vlc\":str(SMVlc[11]) ,\"SM13Vlc\":str(SMVlc[12]) ,\"SM14Vlc\":str(SMVlc[13]) ,\"SM15Vlc\":str(SMVlc[14]) ,\n",
+    "            \"SM16Vlc\": str(SMVlc[15]) ,\"SM17Vlc\":str(SMVlc[16]) ,\"SM18Vlc\":str(SMVlc[17]) ,\"SM19Vlc\":str(SMVlc[18]) ,\"SM20Vlc\":str(SMVlc[19]) ,\n",
+    "            \"SM21Vlc\": str(SMVlc[20]) ,\"SM22Vlc\":str(SMVlc[21]) ,\"SM23Vlc\":str(SMVlc[22]) ,\"SM24Vlc\":str(SMVlc[23]) ,\n",
     "            \"ml_prediction\": str(prediction)}\n",
     "    \n",
-    "    sensor2={\"sm25\":str(sm_v[24]) ,\"sm26\": str(sm_v[25]) ,\"sm27\":str(sm_v[26]) ,\"sm28\":str(sm_v[27]) ,\"sm29\":str(sm_v[28]) ,\n",
-    "             \"sm30\":str(sm_v[29])\n",
+    "    sensor2={\"SM25Vlc\":str(SMVlc[24]) ,\"SM26Vlc\": str(SMVlc[25]) ,\"SM27Vlc\":str(SMVlc[26]) ,\"SM28Vlc\":str(SMVlc[27]) ,\"SM29Vlc\":str(SMVlc[28]) ,\n",
+    "             \"SM30Vlc\":str(SMVlc[29]),\"SM25Vuc\":str(SMVuc[24]) ,\"SM26Vuc\": str(SMVuc[25]) ,\"SM27Vuc\":str(SMVuc[26]) ,\"SM28Vuc\":str(SMVuc[27]) ,\"SM29Vuc\":str(SMVuc[28]) ,\n",
+    "             \"SM30Vuc\":str(SMVuc[29])\n",
     "            }\n",
-    "\n",
+    "    sensor3={\"SM1Vuc\":str(SMVuc[0]),\"SM2Vuc\":str(SMVuc[1]) ,\"SM3Vuc\": str(SMVuc[2]),\"SM4Vuc\": str(SMVuc[3]),\"SM5Vuc\":str(SMVuc[4]),\n",
+    "            \"SM6Vuc\": str(SMVuc[5]) ,\"SM7Vuc\":str(SMVuc[6]) ,\"SM8Vuc\":str(SMVuc[7]) ,\"SM9Vuc\":str(SMVuc[8]) ,\"SM10Vuc\":str(SMVuc[9]) ,\n",
+    "            \"SM11Vuc\": str(SMVuc[10]) ,\"SM12Vuc\":str(SMVuc[11]) ,\"SM13Vuc\":str(SMVuc[12]) ,\"SM14Vuc\":str(SMVuc[13]) ,\"SM15Vuc\":str(SMVuc[14]) ,\n",
+    "            \"SM16Vuc\": str(SMVuc[15]) ,\"SM17Vuc\":str(SMVuc[16]) ,\"SM18Vuc\":str(SMVuc[17]) ,\"SM19Vuc\":str(SMVuc[18]) ,\"SM20Vuc\":str(SMVuc[19]) ,\n",
+    "            \"SM21Vuc\": str(SMVuc[20]) ,\"SM22Vuc\":str(SMVuc[21]) ,\"SM23Vuc\":str(SMVuc[22]) ,\"SM24Vuc\":str(SMVuc[23])\n",
+    "            }\n",
+    "    \n",
     "    # data to be sent to api \n",
-    "    data = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
-    "            'sensorValues': json.dumps(sensor)\n",
+    "    data1 = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
+    "            'sensorValues': json.dumps(sensor1)\n",
     "           }\n",
     "    data2 = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
     "            'sensorValues': json.dumps(sensor2)\n",
+    "           }\n",
+    "    data3 = {'timestamp':\"{:%Y-%m-%d %H:%M:%S}\".format(datetime.datetime.now()), \n",
+    "            'sensorValues': json.dumps(sensor3)\n",
     "           }\n",
     "    #data uploading is commented for now considering posting limit of aws \n",
     "    #r = requests.post(url = API_ENDPOINT, json = data) \n",
@@ -686,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -694,17 +818,20 @@
      "output_type": "stream",
      "text": [
       "Data returned ={\"active\":false}\n",
+      "Data returned ={\"active\":false}\n",
       "Data returned ={\"active\":false}\n"
      ]
     }
    ],
    "source": [
     "#uploads the last row of data for now \n",
-    "r = requests.post(url = API_ENDPOINT, json = data) \n",
+    "r1 = requests.post(url = API_ENDPOINT, json = data1) \n",
     "r2=  requests.post(url = API_ENDPOINT, json = data2) \n",
+    "r3=  requests.post(url = API_ENDPOINT, json = data3) \n",
     "\n",
-    "print(\"Data returned =%s\"%r.text)\n",
-    "print(\"Data returned =%s\"%r2.text)"
+    "print(\"Data returned =%s\"%r1.text)\n",
+    "print(\"Data returned =%s\"%r2.text)\n",
+    "print(\"Data returned =%s\"%r3.text)"
    ]
   },
   {
